src/language/tools/hierarchy2vac/src/hierarchygrammarParser.py
# Generated from hierarchygrammar.g4 by ANTLR 4.7
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO
import sys



class hierarchygrammarParser ( Parser ):

    grammarFileName = "hierarchygrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"'[USERS]'", u"'[ROLES]'", u"'[HIERARCHY]'", 
                     u"'[PRA]'", u"'[RULES]'", u"'[QUERY]'", u"'[INVARIANT]'", 
                     u"'true'", u"'SMER'", u"'PA'", u"'can_assign'", u"'can_revoke'", 
                     u"'reach'", u"'not'", u"'and'", u"'or'", u"'('", u"';'", 
                     u"'*'", u"','", u"'.'", u"':'", u"'='", u"'=>'", u"'?'", 
                     u"')'", u"'['", u"']'", u"'<'", u"'>'" ]

    symbolicNames = [ u"<INVALID>", u"USER", u"ROLE", u"HIER", u"PRA", u"RULE", 
                      u"QUERY", u"INVA", u"TRUE", u"SMER", u"PA", u"CAN_ASSIGN", 
                      u"CAN_REVOKE", u"REACH", u"NOT", u"AND", u"OR", u"LEFTPAREN", 
                      u"SEMI", u"STAR", u"COMMA", u"DOT", u"COLON", u"EQUAL", 
                      u"IMPLY", u"QUESTION", u"RIGHTPAREN", u"LEFTBRACKET", 
                      u"RIGHTBRACKET", u"LEFTTUPLE", u"RIGHTTUPLE", u"Identifier", 
                      u"Constant", u"Whitespace", u"Newline", u"BlockComment", 
                      u"LineComment" ]

    RULE_policy = 0
    RULE_r_start = 1
    RULE_r_user = 2
    RULE_r_role = 3
    RULE_r_hier = 4
    RULE_hier_element = 5
    RULE_order = 6
    RULE_r_pra = 7
    RULE_pra_element = 8
    RULE_r_rule = 9
    RULE_rule_element = 10
    RULE_ca_rule = 11
    RULE_cr_rule = 12
    RULE_precondition = 13
    RULE_literal = 14
    RULE_r_smer = 15
    RULE_smer_element = 16
    RULE_r_query = 17
    RULE_query_element = 18
    RULE_config = 19
    RULE_target = 20

    ruleNames =  [ u"policy", u"r_start", u"r_user", u"r_role", u"r_hier", 
                   u"hier_element", u"order", u"r_pra", u"pra_element", 
                   u"r_rule", u"rule_element", u"ca_rule", u"cr_rule", u"precondition", 
                   u"literal", u"r_smer", u"smer_element", u"r_query", u"query_element", 
                   u"config", u"target" ]

    EOF = Token.EOF
    USER=1
    ROLE=2
    HIER=3
    PRA=4
    RULE=5
    QUERY=6
    INVA=7
    TRUE=8
    SMER=9
    PA=10
    CAN_ASSIGN=11
    CAN_REVOKE=12
    REACH=13
    NOT=14
    AND=15
    OR=16
    LEFTPAREN=17
    SEMI=18
    STAR=19
    COMMA=20
    DOT=21
    COLON=22
    EQUAL=23
    IMPLY=24
    QUESTION=25
    RIGHTPAREN=26
    LEFTBRACKET=27
    RIGHTBRACKET=28
    LEFTTUPLE=29
    RIGHTTUPLE=30
    Identifier=31
    Constant=32
    Whitespace=33
    Newline=34
    BlockComment=35
    LineComment=36

    def __init__(self, input, output=sys.stdout):
        super(hierarchygrammarParser, self).__init__(input, output=output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class PolicyContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(hierarchygrammarParser.PolicyContext, self).__init__(parent, invokingState)
            self.parser = parser

        def r_start(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(hierarchygrammarParser.R_startContext)
            else:
                return self.getTypedRuleContext(hierarchygrammarParser.R_startContext,i)


        def getRuleIndex(self):
            return hierarchygrammarParser.RULE_policy

        def enterRule(self, listener):
            if hasattr(listener, "enterPolicy"):
                listener.enterPolicy(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitPolicy"):
                listener.exitPolicy(self)




    def policy(self):

        localctx = hierarchygrammarParser.PolicyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_policy)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 42
                self.r_start()
                self.state = 45 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << hierarchygrammarParser.USER) | (1 << hierarchygrammarParser.ROLE) | (1 << hierarchygrammarParser.HIER) | (1 << hierarchygrammarParser.PRA) | (1 << hierarchygrammarParser.RULE) | (1 << hierarchygrammarParser.QUERY) | (1 << hierarchygrammarParser.INVA))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class R_startContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(hierarchygrammarParser.R_startContext, self).__init__(parent, invokingState)
            self.parser = parser

        def r_user(self):
            return self.getTypedRuleContext(hierarchygrammarParser.R_userContext,0)


        def r_role(self):
            return self.getTypedRuleContext(hierarchygrammarParser.R_roleContext,0)


        def r_hier(self):
            return self.getTypedRuleContext(hierarchygrammarParser.R_hierContext,0)


        def r_pra(self):
            return self.getTypedRuleContext(hierarchygrammarParser.R_praContext,0)


        def r_rule(self):
            return self.getTypedRuleContext(hierarchygrammarParser.R_ruleContext,0)


        def r_smer(self):
            return self.getTypedRuleContext(hierarchygrammarParser.R_smerContext,0)


        def r_query(self):
            return self.getTypedRuleContext(hierarchygrammarParser.R_queryContext,0)


        def getRuleIndex(self):
            return hierarchygrammarParser.RULE_r_start

        def enterRule(self, listener):
            if hasattr(listener, "enterR_start"):
                listener.enterR_start(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitR_start"):
                listener.exitR_start(self)




    def r_start(self):

        localctx = hierarchygrammarParser.R_startContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_r_start)
        try:
            self.state = 54
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [hierarchygrammarParser.USER]:
                self.enterOuterAlt(localctx, 1)
                self.state = 47
                self.r_user()
                pass
            elif token in [hierarchygrammarParser.ROLE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 48
                self.r_role()
                pass
            elif token in [hierarchygrammarParser.HIER]:
                self.enterOuterAlt(localctx, 3)
                self.state = 49
                self.r_hier()
                pass
            elif token in [hierarchygrammarParser.PRA]:
                self.enterOuterAlt(localctx, 4)
                self.state = 50
                self.r_pra()
                pass
            elif token in [hierarchygrammarParser.RULE]:
                self.enterOuterAlt(localctx, 5)
                self.state = 51
                self.r_rule()
                pass
            elif token in [hierarchygrammarParser.INVA]:
                self.enterOuterAlt(localctx, 6)
                self.state = 52
                self.r_smer()
                pass
            elif token in [hierarchygrammarParser.QUERY]:
                self.enterOuterAlt(localctx, 7)
                self.state = 53
                self.r_query()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class R_userContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(hierarchygrammarParser.R_userContext, self).__init__(parent, invokingState)
            self.parser = parser

        def USER(self):
            return self.getToken(hierarchygrammarParser.USER, 0)

        def Identifier(self, i=None):
            if i is None:
                return self.getTokens(hierarchygrammarParser.Identifier)
            else:
                return self.getToken(hierarchygrammarParser.Identifier, i)

        def getRuleIndex(self):
            return hierarchygrammarParser.RULE_r_user

        def enterRule(self, listener):
            if hasattr(listener, "enterR_user"):
                listener.enterR_user(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitR_user"):
                listener.exitR_user(self)




    def r_user(self):

        localctx = hierarchygrammarParser.R_userContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_r_user)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.match(hierarchygrammarParser.USER)
            self.state = 58 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 57
                self.match(hierarchygrammarParser.Identifier)
                self.state = 60 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==hierarchygrammarParser.Identifier):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class R_roleContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(hierarchygrammarParser.R_roleContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ROLE(self):
            return self.getToken(hierarchygrammarParser.ROLE, 0)

        def Identifier(self, i=None):
            if i is None:
                return self.getTokens(hierarchygrammarParser.Identifier)
            else:
                return self.getToken(hierarchygrammarParser.Identifier, i)

        def getRuleIndex(self):
            return hierarchygrammarParser.RULE_r_role

        def enterRule(self, listener):
            if hasattr(listener, "enterR_role"):
                listener.enterR_role(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitR_role"):
                listener.exitR_role(self)




    def r_role(self):

        localctx = hierarchygrammarParser.R_roleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_r_role)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(hierarchygrammarParser.ROLE)
            self.state = 64 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 63
                self.match(hierarchygrammarParser.Identifier)
                self.state = 66 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==hierarchygrammarParser.Identifier):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class R_hierContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(hierarchygrammarParser.R_hierContext, self).__init__(parent, invokingState)
            self.parser = parser

        def HIER(self):
            return self.getToken(hierarchygrammarParser.HIER, 0)

        def hier_element(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(hierarchygrammarParser.Hier_elementContext)
            else:
                return self.getTypedRuleContext(hierarchygrammarParser.Hier_elementContext,i)


        def getRuleIndex(self):
            return hierarchygrammarParser.RULE_r_hier

        def enterRule(self, listener):
            if hasattr(listener, "enterR_hier"):
                listener.enterR_hier(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitR_hier"):
                listener.exitR_hier(self)




    def r_hier(self):

        localctx = hierarchygrammarParser.R_hierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_r_hier)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(hierarchygrammarParser.HIER)
            self.state = 70 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 69
                self.hier_element()
                self.state = 72 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==hierarchygrammarParser.Identifier):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Hier_elementContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(hierarchygrammarParser.Hier_elementContext, self).__init__(parent, invokingState)
            self.parser = parser
            self.r = None # Token
            self.lr = None # Token

        def Identifier(self, i=None):
            if i is None:
                return self.getTokens(hierarchygrammarParser.Identifier)
            else:
                return self.getToken(hierarchygrammarParser.Identifier, i)

        def order(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(hierarchygrammarParser.OrderContext)
            else:
                return self.getTypedRuleContext(hierarchygrammarParser.OrderContext,i)


        def getRuleIndex(self):
            return hierarchygrammarParser.RULE_hier_element

        def enterRule(self, listener):
            if hasattr(listener, "enterHier_element"):
                listener.enterHier_element(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitHier_element"):
                listener.exitHier_element(self)




    def hier_element(self):

        localctx = hierarchygrammarParser.Hier_elementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_hier_element)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            localctx.r = self.match(hierarchygrammarParser.Identifier)
            self.state = 78 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 75
                self.order()
                self.state = 76
                localctx.lr = self.match(hierarchygrammarParser.Identifier)
                self.state = 80 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==hierarchygrammarParser.LEFTTUPLE or _la==hierarchygrammarParser.RIGHTTUPLE):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class OrderContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(hierarchygrammarParser.OrderContext, self).__init__(parent, invokingState)
            self.parser = parser

        def LEFTTUPLE(self):
            return self.getToken(hierarchygrammarParser.LEFTTUPLE, 0)

        def RIGHTTUPLE(self):
            return self.getToken(hierarchygrammarParser.RIGHTTUPLE, 0)

        def getRuleIndex(self):
            return hierarchygrammarParser.RULE_order

        def enterRule(self, listener):
            if hasattr(listener, "enterOrder"):
                listener.enterOrder(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitOrder"):
                listener.exitOrder(self)




    def order(self):

        localctx = hierarchygrammarParser.OrderContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_order)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            _la = self._input.LA(1)
            if not(_la==hierarchygrammarParser.LEFTTUPLE or _la==hierarchygrammarParser.RIGHTTUPLE):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class R_praContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(hierarchygrammarParser.R_praContext, self).__init__(parent, invokingState)
            self.parser = parser

        def PRA(self):
            return self.getToken(hierarchygrammarParser.PRA, 0)

        def pra_element(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(hierarchygrammarParser.Pra_elementContext)
            else:
                return self.getTypedRuleContext(hierarchygrammarParser.Pra_elementContext,i)


        def getRuleIndex(self):
            return hierarchygrammarParser.RULE_r_pra

        def enterRule(self, listener):
            if hasattr(listener, "enterR_pra"):
                listener.enterR_pra(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitR_pra"):
                listener.exitR_pra(self)




    def r_pra(self):

        localctx = hierarchygrammarParser.R_praContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_r_pra)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(hierarchygrammarParser.PRA)
            self.state = 86 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 85
                self.pra_element()
                self.state = 88 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==hierarchygrammarParser.PA):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Pra_elementContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(hierarchygrammarParser.Pra_elementContext, self).__init__(parent, invokingState)
            self.parser = parser
            self.r = None # Token
            self.a = None # Token

        def PA(self):
            return self.getToken(hierarchygrammarParser.PA, 0)

        def LEFTPAREN(self):
            return self.getToken(hierarchygrammarParser.LEFTPAREN, 0)

        def COMMA(self, i=None):
            if i is None:
                return self.getTokens(hierarchygrammarParser.COMMA)
            else:
                return self.getToken(hierarchygrammarParser.COMMA, i)

        def LEFTBRACKET(self):
            return self.getToken(hierarchygrammarParser.LEFTBRACKET, 0)

        def RIGHTBRACKET(self):
            return self.getToken(hierarchygrammarParser.RIGHTBRACKET, 0)

        def RIGHTPAREN(self):
            return self.getToken(hierarchygrammarParser.RIGHTPAREN, 0)

        def Identifier(self, i=None):
            if i is None:
                return self.getTokens(hierarchygrammarParser.Identifier)
            else:
                return self.getToken(hierarchygrammarParser.Identifier, i)

        def getRuleIndex(self):
            return hierarchygrammarParser.RULE_pra_element

        def enterRule(self, listener):
            if hasattr(listener, "enterPra_element"):
                listener.enterPra_element(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitPra_element"):
                listener.exitPra_element(self)




    def pra_element(self):

        localctx = hierarchygrammarParser.Pra_elementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_pra_element)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(hierarchygrammarParser.PA)
            self.state = 91
            self.match(hierarchygrammarParser.LEFTPAREN)
            self.state = 92
            localctx.r = self.match(hierarchygrammarParser.Identifier)
            self.state = 93
            self.match(hierarchygrammarParser.COMMA)
            self.state = 94
            self.match(hierarchygrammarParser.LEFTBRACKET)
            self.state = 95
            localctx.a = self.match(hierarchygrammarParser.Identifier)
            self.state = 96
            self.match(hierarchygrammarParser.COMMA)
            self.state = 97
            localctx.r = self.match(hierarchygrammarParser.Identifier)
            self.state = 98
            self.match(hierarchygrammarParser.RIGHTBRACKET)
            self.state = 99
            self.match(hierarchygrammarParser.RIGHTPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class R_ruleContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(hierarchygrammarParser.R_ruleContext, self).__init__(parent, invokingState)
            self.parser = parser

        def RULE(self):
            return self.getToken(hierarchygrammarParser.RULE, 0)

        def rule_element(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(hierarchygrammarParser.Rule_elementContext)
            else:
                return self.getTypedRuleContext(hierarchygrammarParser.Rule_elementContext,i)


        def getRuleIndex(self):
            return hierarchygrammarParser.RULE_r_rule

        def enterRule(self, listener):
            if hasattr(listener, "enterR_rule"):
                listener.enterR_rule(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitR_rule"):
                listener.exitR_rule(self)




    def r_rule(self):

        localctx = hierarchygrammarParser.R_ruleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_r_rule)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(hierarchygrammarParser.RULE)
            self.state = 103 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 102
                self.rule_element()
                self.state = 105 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==hierarchygrammarParser.CAN_ASSIGN or _la==hierarchygrammarParser.CAN_REVOKE):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Rule_elementContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(hierarchygrammarParser.Rule_elementContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ca_rule(self):
            return self.getTypedRuleContext(hierarchygrammarParser.Ca_ruleContext,0)


        def cr_rule(self):
            return self.getTypedRuleContext(hierarchygrammarParser.Cr_ruleContext,0)


        def getRuleIndex(self):
            return hierarchygrammarParser.RULE_rule_element

        def enterRule(self, listener):
            if hasattr(listener, "enterRule_element"):
                listener.enterRule_element(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitRule_element"):
                listener.exitRule_element(self)




    def rule_element(self):

        localctx = hierarchygrammarParser.Rule_elementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_rule_element)
        try:
            self.state = 109
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [hierarchygrammarParser.CAN_ASSIGN]:
                self.enterOuterAlt(localctx, 1)
                self.state = 107
                self.ca_rule()
                pass
            elif token in [hierarchygrammarParser.CAN_REVOKE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 108
                self.cr_rule()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Ca_ruleContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(hierarchygrammarParser.Ca_ruleContext, self).__init__(parent, invokingState)
            self.parser = parser
            self.a = None # Token
            self.t = None # Token

        def CAN_ASSIGN(self):
            return self.getToken(hierarchygrammarParser.CAN_ASSIGN, 0)

        def LEFTPAREN(self):
            return self.getToken(hierarchygrammarParser.LEFTPAREN, 0)

        def COMMA(self, i=None):
            if i is None:
                return self.getTokens(hierarchygrammarParser.COMMA)
            else:
                return self.getToken(hierarchygrammarParser.COMMA, i)

        def precondition(self):
            return self.getTypedRuleContext(hierarchygrammarParser.PreconditionContext,0)


        def RIGHTPAREN(self):
            return self.getToken(hierarchygrammarParser.RIGHTPAREN, 0)

        def Identifier(self, i=None):
            if i is None:
                return self.getTokens(hierarchygrammarParser.Identifier)
            else:
                return self.getToken(hierarchygrammarParser.Identifier, i)

        def getRuleIndex(self):
            return hierarchygrammarParser.RULE_ca_rule

        def enterRule(self, listener):
            if hasattr(listener, "enterCa_rule"):
                listener.enterCa_rule(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitCa_rule"):
                listener.exitCa_rule(self)




    def ca_rule(self):

        localctx = hierarchygrammarParser.Ca_ruleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_ca_rule)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(hierarchygrammarParser.CAN_ASSIGN)
            self.state = 112
            self.match(hierarchygrammarParser.LEFTPAREN)
            self.state = 113
            localctx.a = self.match(hierarchygrammarParser.Identifier)
            self.state = 114
            self.match(hierarchygrammarParser.COMMA)
            self.state = 115
            self.precondition()
            self.state = 116
            self.match(hierarchygrammarParser.COMMA)
            self.state = 117
            localctx.t = self.match(hierarchygrammarParser.Identifier)
            self.state = 118
            self.match(hierarchygrammarParser.RIGHTPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Cr_ruleContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(hierarchygrammarParser.Cr_ruleContext, self).__init__(parent, invokingState)
            self.parser = parser
            self.a = None # Token
            self.t = None # Token

        def CAN_REVOKE(self):
            return self.getToken(hierarchygrammarParser.CAN_REVOKE, 0)

        def LEFTPAREN(self):
            return self.getToken(hierarchygrammarParser.LEFTPAREN, 0)

        def COMMA(self):
            return self.getToken(hierarchygrammarParser.COMMA, 0)

        def RIGHTPAREN(self):
            return self.getToken(hierarchygrammarParser.RIGHTPAREN, 0)

        def Identifier(self, i=None):
            if i is None:
                return self.getTokens(hierarchygrammarParser.Identifier)
            else:
                return self.getToken(hierarchygrammarParser.Identifier, i)

        def getRuleIndex(self):
            return hierarchygrammarParser.RULE_cr_rule

        def enterRule(self, listener):
            if hasattr(listener, "enterCr_rule"):
                listener.enterCr_rule(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitCr_rule"):
                listener.exitCr_rule(self)




    def cr_rule(self):

        localctx = hierarchygrammarParser.Cr_ruleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_cr_rule)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(hierarchygrammarParser.CAN_REVOKE)
            self.state = 121
            self.match(hierarchygrammarParser.LEFTPAREN)
            self.state = 122
            localctx.a = self.match(hierarchygrammarParser.Identifier)
            self.state = 123
            self.match(hierarchygrammarParser.COMMA)
            self.state = 124
            localctx.t = self.match(hierarchygrammarParser.Identifier)
            self.state = 125
            self.match(hierarchygrammarParser.RIGHTPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PreconditionContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(hierarchygrammarParser.PreconditionContext, self).__init__(parent, invokingState)
            self.parser = parser

        def TRUE(self):
            return self.getToken(hierarchygrammarParser.TRUE, 0)

        def literal(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(hierarchygrammarParser.LiteralContext)
            else:
                return self.getTypedRuleContext(hierarchygrammarParser.LiteralContext,i)


        def AND(self, i=None):
            if i is None:
                return self.getTokens(hierarchygrammarParser.AND)
            else:
                return self.getToken(hierarchygrammarParser.AND, i)

        def getRuleIndex(self):
            return hierarchygrammarParser.RULE_precondition

        def enterRule(self, listener):
            if hasattr(listener, "enterPrecondition"):
                listener.enterPrecondition(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitPrecondition"):
                listener.exitPrecondition(self)




    def precondition(self):

        localctx = hierarchygrammarParser.PreconditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_precondition)
        self._la = 0 # Token type
        try:
            self.state = 136
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [hierarchygrammarParser.TRUE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 127
                self.match(hierarchygrammarParser.TRUE)
                pass
            elif token in [hierarchygrammarParser.NOT, hierarchygrammarParser.Identifier]:
                self.enterOuterAlt(localctx, 2)
                self.state = 128
                self.literal()
                self.state = 133
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==hierarchygrammarParser.AND:
                    self.state = 129
                    self.match(hierarchygrammarParser.AND)
                    self.state = 130
                    self.literal()
                    self.state = 135
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LiteralContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(hierarchygrammarParser.LiteralContext, self).__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(hierarchygrammarParser.Identifier, 0)

        def NOT(self):
            return self.getToken(hierarchygrammarParser.NOT, 0)
